<resources>
    <string name="app_name">ChallengeChapterEmpat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="depp_note">Depp Note</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="home">Home</string>
    <string name="filter">filter</string>
    <string name="add_note">add note</string>
    <string name="empty_state">Data masih kosong, Silahkan menambah catatan notes</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="input_data">Input Data</string>
    <string name="masukan_judul_catatan">Masukan judul catatan</string>
    <string name="masukan_isi_konten_catatan">Masukan isi konten catatan</string>
    <string name="save_note">save note</string>
    <string name="cancel">Cancel</string>
    <string name="masukan_date_tanggal">masukan date/tanggal</string>
    <string name="edit_note">Edit Note</string>
    <string name="edit_judul_catatan_note">Edit judul catatan note</string>
    <string name="edit_isi_kontent_catatan_note">Edit isi kontent catatan note</string>
    <string name="edit_date_tanggal_catatan_note">Edit date tanggal catatan note</string>
    <string name="detail_note">Detail Note</string>
    <string name="back">back</string>
</resources>