<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.HomeFragment"
    android:padding="20dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/btnProfile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/profile"
            android:src="@drawable/ic_account"
            tools:ignore="ImageContrastCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="3dp" />

        <TextView
            android:id="@+id/tvHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/home"
            android:textColor="@color/sakura"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="11dp" />

        <ImageView
            android:id="@+id/iv_filter"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:contentDescription="@string/filter"
            android:src="@drawable/ic_filter"
            tools:ignore="ImageContrastCheck"
            tools:layout_editor_absoluteX="316dp"
            tools:layout_editor_absoluteY="10dp" />


    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_note"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_state"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/sakura2"
        android:contentDescription="@string/add_note"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>