<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="onClick"
            type="com.example.challengechapterempat.ui.EditNoteFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.EditNoteFragment">

        <TextView
            android:id="@+id/tv_title_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/edit_note"
            android:textAllCaps="true"
            android:textColor="@color/sakura"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_edit">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_judul_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_judul_catatan_note"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_content_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_isi_kontent_catatan_note"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_date_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_date_tanggal_catatan_note"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_edit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/sakura"
            android:text="@string/save_note"
            android:onClick="@{()->onClick.saveEdit()}"
            android:textAllCaps="true"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel_edit"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel_edit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/sakura"
            android:text="@string/cancel"
            android:onClick="@{()->onClick.cancelEdit()}"
            android:textAllCaps="true"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_save_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>